--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="botao ativo">Meta da Academia</button>
             <button class="botao">Criar projetos em Javascript</button>
             <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao">comprar meu primeiro carro</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
