--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="botoes">
             <button class="botao ativo">Meta da Academia</button>
             <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
+            <button class="botao">conquistar metas desse ano</button>
             <button class="botao">comprar meu primeiro carro</button>
         </div>
         <div class="abas-textos">
