--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="conteudo">
         <div class="botoes">
             <button class="botao ativo">Meta da Academia</button>
-            <button class="botao">Criar projetos em Javascript</button>
+            <button class="botao">Estudar</button>
             <button class="botao">conquistar metas desse ano</button>
             <button class="botao">comprar meu primeiro carro</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal">320kg no leg</h3>
+                <h4 class="aba-conteudo-titulo-secundario">estudar 2 horas por dia</h4>
                 <div class="contador">
                     <div class="contador-digito">
                         <p class="contador-digito-numero" id="dias0"></p>
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal">reforma do meu quarto</h3>
+                <h4 class="aba-conteudo-titulo-secundario">comprar miha s10</h4>
                 <div class="contador">
                     <div class="contador-digito">
                         <p class="contador-digito-numero" id="dias1"></p>
