--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">320kg no leg</h3>
-                <h4 class="aba-conteudo-titulo-secundario">estudar 2 horas por dia</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
                         <p class="contador-digito-numero" id="dias0"></p>
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">reforma do meu quarto</h3>
-                <h4 class="aba-conteudo-titulo-secundario">comprar miha s10</h4>
+                <h3 class="aba-conteudo-titulo-principal">estudar 2 horas p/ dia</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
                         <p class="contador-digito-numero" id="dias1"></p>
